# bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  ka.py  main.py  pyproject.toml  start.sh  webscraper.py
.github/workflows/: docker.yml
bot/: __main__.py  bot.py
bot/cogs/: classes.py  reaction_roles.py
bot/types/: configtype.py
csgo/: cookies.pkl  keys.json  prevgame.txt  records.txt
dukehub/: uid.json
helpers/: flags.py  pagination.py
