[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0"
numpy = "^1.22.2"
requests = "^2.28.0"
selenium = "^4.3.0"
google-api-python-client = "^2.52.0"
google-auth-oauthlib = "^0.5.2"
pytz = "^2022.1"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus"}
toml = "^0.10.2"
jishaku = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"